creation user,authentificator, register, flash

--- a/templates/page/contact.html.twig
+++ b/templates/page/contact.html.twig
@@ -1,6 +1,6 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Hello PageController!{% endblock %}
+{% block title %}Pour nous contacter{% endblock %}
 
 {% block body %}
         <!-- Main Content-->
