--- a/templates/page/about.html.twig
+++ b/templates/page/about.html.twig
@@ -1,6 +1,8 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Hello PageController!{% endblock %}
+{% block title %}A propos de nous...{% endblock %}
+
+{% block title_header %}A propos de nous{% endblock %}
 
 {% block body %}
         <!-- Main Content-->
