--- a/templates/post/home.html.twig
+++ b/templates/post/home.html.twig
@@ -1,6 +1,8 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Hello PostController!{% endblock %}
+{% block title %}Bienvenue sur mon Blog{% endblock %}
+
+{% block subtitle_header %}Toute l'actualité du surf{% endblock %}
 
 {% block body %}
         <!-- Main Content-->
