--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,8 +1,15 @@
-{% extends 'base.html.twig' %}
+{% extends 'clean.html.twig' %}
 
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
+
+        <main class="mb-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <div class="my-5">
+
 <form method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -39,4 +46,11 @@
         Sign in
     </button>
 </form>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+
 {% endblock %}
