--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,32 +1,34 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register
+{% endblock %}
 
 {% block body %}
 
- <main class="mb-4">
-    <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="my-5">
-                    <h1>Register</h1>
-                            
-                            {{ form_start(registrationForm) }}
-                            {{ form_row(registrationForm.email) }}
-                            {{ form_row(registrationForm.plainPassword, {
+	<main class="mb-4">
+		<div class="container px-4 px-lg-5">
+			<div class="row gx-4 gx-lg-5 justify-content-center">
+				<div class="col-md-10 col-lg-8 col-xl-7">
+					<div class="my-5">
+						<h1>Register</h1>
+
+						{{ form_start(registrationForm) }}
+						{{ form_row(registrationForm.email) }}
+						{{ form_row(registrationForm.plainPassword, {
                                 label: 'Password'
                             }) }}
-                            {{ form_row(registrationForm.agreeTerms) }}
+						{{ form_row(registrationForm.agreeTerms) }}
 
-{#                             <button type="submit" class="btn">Register</button>
- #}                             <button class="btn btn-lg btn-primary" type="submit">
-                            Register
-                            </button
-                            {{ form_end(registrationForm) }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
+						{#                             <button type="submit" class="btn">Register</button>
+						 #}
+						<button class="btn btn-lg btn-primary" type="submit">
+							Register
+						</button>
+						{{ form_end(registrationForm) }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
 
 {% endblock %}
