--- a/templates/post/view.html.twig
+++ b/templates/post/view.html.twig
@@ -1,21 +1,39 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}{{post.title}}{% endblock %}
+{% block title %}
+	{{post.title}}
+{% endblock %}
 
-{% block title_header %}{{post.title}}{% endblock %}
+{% block title_header %}
+	{{post.title}}
+{% endblock %}
 
-{% block subtitle_header %}test de sous-titre{% endblock %}
+{% block subtitle_header %}test de sous-titre
+{% endblock %}
+{% block imageh %}
+	<header class="masthead" style="background-image: url('{{post.image }}')">
+	{% endblock %}
 
-{% block body %}
-        <!-- Post Content-->
-        <article class="mb-4">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>{{post.content}}</p>
-                    </div>
-                </div>
-            </div>
-        </article>
+	{% block body %}
+		<!-- Post Content-->
+		<article class="mb-4">
+			<div class="container px-4 px-lg-5">
+				<div class="row gx-4 gx-lg-5 justify-content-center">
+					<div class="col-md-10 col-lg-8 col-xl-7">
+						{{post.content | raw}}
+						<p class="post-meta"></p>
+					</div>
+					<div class="col-md-10 col-lg-8 col-xl-7">
+						Rédigé par
+						{{post.user.email}}
+						- Publié le
+						{{post.createdAt | ago}}
+						- Classé dans
+						{{post.category.name}}
+					</div>
+				</div>
+			</div>
+		</div>
+	</article>
 
 {% endblock %}
