--- a/templates/post/home.html.twig
+++ b/templates/post/home.html.twig
@@ -7,23 +7,23 @@
 {% endblock %}
 
 {% block body %}
-	{# {{ dump(posts) }} #}
+	
 
 	<!-- Main Content-->
 	<div class="container px-4 px-lg-5">
 		<div class="row gx-4 gx-lg-5 justify-content-center">
 			<div class="col-md-10 col-lg-8 col-xl-7">
 				{% for post in posts %}
-
+				{# {{ dump(posts) }} #}
 					<div class="post-preview post-content">
 						<a href="{{ path('post_view', {slug:post.slug}) }}">
 							<h2 class="post-title">{{ post.title }}</h2>
-							<img src="{{ post.image }}" alt="" style="width: 100%">
+							<img src="{{ post.image }}" alt="" >
 							<h3 class="post-subtitle">{{ post.content | u.truncate(150, '...') | raw}}</h3>
 						</a>
 						<p class="post-meta">
-							Rédigé par {{post.user.email}},
-							Publié le {{post.createdAt | ago}}:
+							Rédigé par {{post.user.email}} -
+							Publié le {{post.createdAt | ago}} -
 							Classé dans {{post.category.name}}
 						</p>
 					</div>
