--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -1,21 +1,42 @@
-{% extends 'base.html.twig' %}
+{% extends 'clean.html.twig' %}
 
-{% block title %}Hello CategoryController!{% endblock %}
+{% block title %}Bienvenue sur mon Blog
+{% endblock %}
+
+{% block subtitle_header %}Toute l'actualité du surf
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	
 
-<div class="example-wrapper">
-    <h1>Hello {{ category }}! ✅</h1>
+	<!-- Main Content-->
+	<div class="container px-4 px-lg-5">
+		<div class="row gx-4 gx-lg-5 justify-content-center">
+			<div class="col-md-10 col-lg-8 col-xl-7">
+                <h2>Categorie: {{category.name}}</h2>
+				{% for post in category.posts %}
+				{# {{ dump(posts) }} #}
+					<div class="post-preview post-content">
+						<a href="{{ path('post_view', {slug:post.slug}) }}">
+							<h2 class="post-title">{{ post.title }}</h2>
+							<img src="{{ post.image }}" alt="" >
+							<h3 class="post-subtitle">{{ post.content | u.truncate(150, '...') | raw}}</h3>
+						</a>
+						<p class="post-meta">
+							Rédigé par {{post.user.email}} -
+							Publié le {{post.createdAt | ago}} -
+							Classé dans {{post.category.name}}
+						</p>
+					</div>
+					<hr>
+				{% endfor %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/symfony_blog/src/Controller/CategoryController.php'|file_link(0) }}">src/Controller/CategoryController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/symfony_blog/templates/category/index.html.twig'|file_link(0) }}">templates/category/index.html.twig</a></code></li>
-    </ul>
-    {{dump(category.posts)}}
-</div>
+				<!-- Pager-->
+				<div class="d-flex justify-content-end mb-4">
+					<a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
 {% endblock %}
